
INCLUDES			= @INCLUDES@

noinst_LTLIBRARIES		= libgtop_names-2.0.la

libgtop_names_2_0_la_SOURCES	= cpu.c mem.c swap.c uptime.c loadavg.c \
				  shm_limits.c msg_limits.c sem_limits.c \
				  proclist.c sysdeps.c procstate.c procuid.c \
				  proctime.c procmem.c procsignal.c \
				  prockernel.c procsegment.c fsusage.c \
				  mountlist.c procargs.c procmap.c netload.c \
				  ppp.c

libgtop_names_2_0_la_LDFLAGS	= $(LT_VERSION_INFO)

